Bug 470580 - Stopwatch does not correctly show hours
Summary: Stopwatch does not correctly show hours
Status: RESOLVED FIXED
Alias: None
Product: KClock
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.04.1
Platform: Flatpak Linux
: NOR minor
Target Milestone: ---
Assignee: Devin Lin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-03 09:47 UTC by 648jade
Modified: 2023-08-19 05:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot showing 90:43 instead of 1:30:43 (36.59 KB, image/png)
2023-06-03 09:47 UTC, 648jade
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 648jade 2023-06-03 09:47:50 UTC
Created attachment 159432 [details]
screenshot showing 90:43 instead of 1:30:43

Stopwatch continues to count minutes beyond 60 instead of showing hours as expected. 
 
Operating System: Debian GNU/Linux 12
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Comment 1 Justin Zobel 2023-06-05 05:27:24 UTC
Can confirm this behaviour. Not sure if this is a wishlist or a bug but it would be nice to show hours as well.
Comment 2 Devin Lin 2023-06-05 14:36:16 UTC
Thank you for the bug report, this indeed needs to be fixed.
Comment 3 Bug Janitor Service 2023-08-18 22:38:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kclock/-/merge_requests/98
Comment 4 hanyoung 2023-08-19 05:01:27 UTC
Git commit 43d92a6fc49b8d3ce4d9bb84e3efe42efad4532c by Han Young, on behalf of K. Cottonears.
Committed on 19/08/2023 at 07:01.
Pushed by hanyoung into branch 'master'.

Add Hours Display to Stopwatch

Adds hours to the stopwatch page and makes minutes above 60 display 0.

M  +1    -1    src/kclock/qml/stopwatch/StopwatchPage.qml
M  +22   -4    src/kclock/stopwatchtimer.cpp
M  +5    -0    src/kclock/stopwatchtimer.h

https://invent.kde.org/utilities/kclock/-/commit/43d92a6fc49b8d3ce4d9bb84e3efe42efad4532c