Add Hours Display to Stopwatch

Adds hours to the stopwatch page and makes minutes above 60 display 0.

BUG: 470580